wip: phil foundations

--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -286,15 +286,15 @@ Defense of S5 for knowledge rests on an interpretation of the knowledge operator
 We must justify this interpretation. While ours is a model that departs from those that appear in formal epistemology, we shall argue that it does a good job of capturing the prominent theories of knowledge espoused by non-formal epistemologists. Our model is also situated well on the rationality tier for modeling realistic human agents whose beliefs are justified, which is a dramatic improvement, from the perspective of realism, over the higher tiers with S5 common knowledge or S5 bounded rationality.
 
 \subsubsection{Desiderata of a Static Base}
-In constructing our static base, we must identify the desirable features to be achieved. In laying out these desirable features, we motivate our model combining knowledge and belief. 
+In constructing our static base, we must identify the desirable features to be achieved. In laying out these desirable features, we motivate our model that combines knowledge and belief. 
 
-First, the model should be well-balanced in the trade off of normativity \emph{vs.} realism so that it can be used to analyze real-world cases as well as idealize formal cases.
+First, the model should be well-balanced in the trade off of normativity \emph{vs.} realism so that it can be used to analyze real-world cases as well as idealized formal cases.
 
-Second, the model should make sense from an epistemological stand point, \emph{viz.} the philosophical considerations of epistemologists.
+Second, the model should make sense from an epistemological standpoint, \emph{viz.} the philosophical considerations of epistemologists. To construct a system of epistemic logic is to construct a formal theory of epistemology for \emph{some} type of agent, whether it is a perfect deductive reasoner like a computer over a relatively small database ontology or \emph{homo economicus} in well-structured strategic situations, or an imperfect reasoner like a human in the real world. So far, the latter type of agent has been neglected by formal efforts, because attention has been on properties of formal systems, see below, rather than primarily on their philosophical foundations. 
 
-Third, the model should be a sound and complete logical system to serve as a static foundation for a dynamic extension with actions.
+Third, the model should be a sound and complete logical system to serve as a static foundation for an extension that treats actions. Just because attention must be paid to the philosophical foundations and motivations for a formal system does not mean that the formal system is off the hook for the standard desiderata of a logic. The logic should also seek to balance expressive power and complexity, which are always in competition with each other.
 
-\paragraph{Normative-Realism Trade-Off}
+\paragraph{1. Normative-Realism Trade-Off} 
 A model of rationality is situated in a spectrum trading off realism for normative evalutation and prescription. A totally idealized model like that of game theory or rational choice theory is entirely normative. There is no doubt that the agents being modeled are not anything like human beings. The model presumes normativity by showing that acting like an ideally rational agent results in optimal payoffs possible. So, for humans who want to optimize their decisions for payoffs, acting like ideally rational agents is best. However, ideally rational agents have properties that real humans lack, so unless a human can run a simulated agent on a correctly formalized model of a situation, she is unlikely to identify the correct action. After the fact, with a correctly formalized model of the situation, her decision can be analyzed in a post-mortem, but post-mortems never do any good for their subjects.
 
 % First, we seek a model that is low on the tiers of rationality, so that it achieves a level of realism suitable for human agents but also maintains some normative prescriptions as a theory of rationality. The S5 common knowledge tier describes the behavior of ideally rational agents, and in this sense is wholly normative. However, this level of rationality is not achievable by human reasoners, due to their limited cognitive capacity. Thus, the theory of S5 common knowledge can serve to evaluate decisions made by human agents, and can realistically model only a very limited space of human behaviors. One would expect, however, that this theory of rationality would be an appropriate balance of realism and normativity for future systems of artificial intelligence. 
@@ -318,7 +318,7 @@ For completeness, we describe the lowest tier of model. It is a model of normal 
 
 Along similar lines but in pursuit of different theoretical interests is the so-called Belief-Desire-Intention (BDI) model of action. This model seeks to explain the modules responsible for actions among humans and presumably other potential agents. The model holds that beliefs about the world, desires for how the world could be, and intentions to realize those desired states, are jointly sufficient and individually necessary conditions for actions. This model is related to the GCA model defended here in that its agents can make mistakes due to false beliefs. 
 
-\paragraph{Epistemology}
+\paragraph{2. Philosophical Foundations}
 A formal epistemic theory should strive for adequate philosophical grounding in good epistemology. Hintikka took this very seriously in his 1967 book on \emph{Knowledge and Belief}~\cite{Hintikka}, which serves as a seminal work in the field of formal epistemology. Hintikka dedicates a great portion of the book to exploring how his formal system handles the intuitive judgments of philosophers regarding ordinary language statements, which was the primary method at the time. An epistemic logic divorced from a philosophical foundation is no longer an epistemic logic for reasoning about human-like knowledge. Some idealized epistemic logics can serve as logics for reasoning about machine knowledge in closed worlds, but as machines come to interact with larger and more complex parts of the world, these idealized logics diminish in adequacy, as computational limitations prevent the machine from implementing even a perfect Bayesian reasoning system. Thus, careful consideration of an epistemic logic's philosophical foundation is in order.
 
 Epistemologists primarily seek a theory of justification that can avoid Gettier-style counterexamples~\cite{Gettier} and a theory of knowledge that can solve the problem of skepticism. A system of formal epistemology should respect these questions by coherently addressing them as formal theories of epistemology proper. The S5 with common knowledge epistemic logic does not strive for this, nor is it clear that theories of bounded rationality do, either. Recent work in epistemology has applied Bayesian reasoning to the justification problem, and probabilistic epistemic logics help formalize these Bayesian approaches. We briefly recount some broad positions of interest from epistemology that our model should take a considered position on.
@@ -334,25 +334,31 @@ Epistemology is the study of knowledge, and knowledge is widely held to require 
 	\item If (c), then no beliefs are justified.
 	\item Therefore, justification is impossible for beliefs.
 \end{enumerate}
-A theory of justification is shaped by how it responds to this regress argument. Denying premise (1) requires a theory to explain what, other than beliefs, justifies beliefs. Denying premise (3) pushes one toward a \emph{foundationalist} theory, where the task then is to describe how a foundation of basic beliefs can be justified, and how the principle of premise (1) does not properly apply to them. Denying premise (4) pushes one toward \emph{coherentism}, where the task is to justify how a circular chain of beliefs is not viciously circular. Denying premise (5) pushes one toward \emph{infinitism}, where the task is to justify how an unfinished infinite chain can have justified constituent beliefs.
+A theory of justification is shaped by how it responds to this regress argument. Denying premise (1) requires a theory to explain what, other than beliefs, justifies beliefs. Popular candidates include experiential mental states. This involves justification flowing from something that is not true or false to something true or false, and thus is not easily formalized in a logic. Denying premise (3) pushes one toward a \emph{foundationalist} theory, where the task then is to describe how a foundation of basic beliefs can be justified, and how the principle of premise (1) does not properly apply to them. Denying premise (4) pushes one toward \emph{coherentism}, where the task is to justify how a circular chain of beliefs is not viciously circular. Denying premise (5) pushes one toward \emph{infinitism}, where the task is to justify how an incomplete infinite chain can have justified constituent beliefs.
 
-In addition to responding to the regress argument, a theory of epistemic justification must present an analysis of what constitutes justification. In addition to addressing the regress argument, theories of justification must address an argument from logical closure. The logical closure argument runs as follows:
+In addition to responding to the regress argument, a theory of epistemic justification must present an analysis of what constitutes justification. In addressing the regress argument, a theory takes a position about the structure of the justification relation and whether believes are of a single type or of multiple types. A theory must then take a position about the definition of the justification relation so as to avoid the problem of skepticism.
+
+
+\subparagraph{Skepticism}
+We take it as a basic assumption that human knowledge is possible, and therefore that the epistemic position of general skepticism is false. Therefore, in constructing a formal model of epistemic logic, that model should not lead to general skepticism when applied to humans. 
+
+In addition to addressing the infinite regress argument, theories of justification must address an argument from logical closure. The logical closure argument runs as follows:
 \begin{enumerate}
-	\item $i$ knows that $\varphi$ only if $i$ knows $\tlnot$\emph{skeptical hypothesis}, where \emph{skeptical hypothesis} is some possibility that entails $\tlnot \varphi$.
+	\item $i$ knows that $\varphi$ only if $i$ knows $\tlnot$\emph{skeptical hypothesis}, where \emph{skeptical hypothesis} is some proposition that entails $\tlnot \varphi$.
 	\item $i$ does not know $\tlnot$\emph{skeptical hypothesis}.
 	\item Therefore, $i$ does not know $\varphi$.
 \end{enumerate}
 
-Denying (1) denies that knowledge is closed under logical entailment, and denying (2) strikes many as the wrong approach, as a skeptical hypothesis can be described in such a way that one cannot know it is false. G.E. Moore famously turned the argument from closure on its head and affirmed the antecedent of (1), thereby denying (2), but this is not the approach endorsed here.
+Denying (1) denies that knowledge is closed under logical entailment, and denying (2) requires care so that the theory will generalize and avoid all potential skeptical scenarios. Denying (1) presents a significant problem for formal epistemologists hoping to create a normal modal logic of knowledge. Common attempts to deny (2) include placing knowledge in a direct justification relation with the real world via causation, or defending a position that some hypotheses can be justifiably ignored from consideration. 
 
 A theory of justification is internalist if it holds that the believer is justified in believing some proposition $\varphi$ if and only if she has awareness or access to the basis for believing $\varphi$. Externalist theories deny this, and hold that external facts, \emph{e.g.} the causal process that produced the belief, are what justify beliefs and produce knowledge. Theories of justification sometimes apply to both knowledge and justified belief, and sometimes to just one or the other.
 
 A strong internalist view is that, through reflection, one can know that she knows a propostion, and know that she believes but does not know a proposition~\cite{Prichard}. This corresponds to including both introspection axioms for the knowledge operator. A weaker internalist view that we endorse is \emph{evidentialism}, which holds that a belief is justified if and only if the believer has evidence supporting the belief. The task of an \emph{evidentialist} theory is to spell out what evidence is.
 
-A dominant externalist position is that the process that produced the belief that $\varphi$ be a \emph{reliable} one, in some sense to be defined by a given \emph{reliablist} theory.
+A dominant externalist position is that the process that produced the belief that $\varphi$ be a \emph{reliable} one, in some sense to be defined by a given \emph{reliablist} theory. This avoids the problem of skepticism by placing the justification relation between the world and the knowledge of the agent, with or without the agent's awareness of this justification being present. Thus, if $\varphi$ is true, and $i$'s belief that $\varphi$ is produced by a reliable process in the real world, then $i$ knows that $\varphi$ and therefore knows that the \emph{skeptical hypothesis} is false, because inferring that from their being inconsistent is also a reliable process. This approach clearly rejects both positive and negative introspection axioms, as introspection plays no role in the justification of knowledge.
 
-\subparagraph{Skepticism}
-We take it as a basic assumption that human knowledge is possible, and therefore that the epistemic position of general skepticism is false. Therefore, in constructing a formal model of epistemic logic, that model should not lead to general skepticism when applied to humans. The positive introspection axiom destroys almost all knowledge through the application of its contrapositive, $\tlnot \Kns{i}\Kns{i}\varphi \iimplies \tlnot \Kns{i}\varphi$. Thus, if strong internalism about knowledge is true, then knowledge is extremely rare. Knowing that one knows a proposition $\varphi$ amounts to satisfying all the conditions of knowledge with respect to the proposition that one knows $\varphi$. This means that in addition to satisfying all the conditions of knowledge with respect to $\varphi$, including the external conditions of justification, one must also be in a position to know that those external conditions are in fact satisfied. On a causal theory of justification, this amounts to knowing, actually \emph{knowing}, the exact causal process that produced your knowledge, and that this is a justifying causal process. An internalist theory of knowledge suffers from an infinite regress about the condition that known propositions be true. With the positive introspection axiom, $\Kns{i}\varphi$ only if $\Kns{i}\Kns{i}\varphi$, and $\Kns{i}\Kns{i}\varphi$ only if $\Kns{i}\Kns{i}\Kns{i}\varphi$, etc. At each layer, even for an internalist theory of knowledge, there is one externalist condition of knowledge, namely that the known proposition actually be true of the world. This amounts to knowing things in the object language about the metalanguage semantics, creating an infinitely high semantic tower that must be known in order for one atomic proposition to be known. The demands on knowledge are exceedingly high. Therefore, externalist positions about knowledge ought to, and frequently do, abandon the positive introspection requirement.
+
+The positive introspection axiom destroys almost all knowledge through the application of its contrapositive, $\tlnot \Kns{i}\Kns{i}\varphi \iimplies \tlnot \Kns{i}\varphi$. Thus, if strong internalism about knowledge is true, then knowledge is extremely rare. Knowing that one knows a proposition $\varphi$ amounts to satisfying all the conditions of knowledge with respect to the proposition that one knows $\varphi$. This means that in addition to satisfying all the conditions of knowledge with respect to $\varphi$, including the external conditions of justification, one must also be in a position to know that those external conditions are in fact satisfied. On a causal theory of justification, this amounts to knowing, actually \emph{knowing}, the exact causal process that produced your knowledge, and that this is a justifying causal process. An internalist theory of knowledge suffers from an infinite regress about the condition that known propositions be true. With the positive introspection axiom, $\Kns{i}\varphi$ only if $\Kns{i}\Kns{i}\varphi$, and $\Kns{i}\Kns{i}\varphi$ only if $\Kns{i}\Kns{i}\Kns{i}\varphi$, etc. At each layer, even for an internalist theory of knowledge, there is one externalist condition of knowledge, namely that the known proposition actually be true of the world. This amounts to knowing things in the object language about the metalanguage semantics, creating an infinitely high semantic tower that must be known in order for one atomic proposition to be known. The demands on knowledge are exceedingly high. Therefore, externalist positions about knowledge ought to, and frequently do, abandon the positive introspection requirement.
 
 %\subparagraph{Open World Property}
 %A formal model of human knowledge should do right by the world that humans know things about, to the largest extent as is reasonable. This means abiding by the open world property,
@@ -383,7 +389,7 @@ We take it as a basic assumption that human knowledge is possible, and therefore
 
 %This is justified by the principle that people normally believe what they assert as statements. Hintikka's doxastic logic has a transitive doxastic relation, so it takes positive introspection about belief as an axiom, and therefore the above formalization is not satisfiable in a model (and so is doxastically implied). 
 
-
+\paragraph{3. Formal Properties}
 OLD BELOW\\
 This system warrants defending, as John Rushby has recently challenged the decisions. His concerns can be summarized as follows:
 \begin{enumerate}
